--- a/templates/default/tmpl/properties.tmpl
+++ b/templates/default/tmpl/properties.tmpl
@@ -8,8 +8,7 @@
 </dt>
 <dd>
     <?js if (this.description) { ?>
-    <h5>Description:</h5>
-    <p>
+    <p class="description">
         <?js= this.description ?>
     </p>
     <?js } ?>
