--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -41,8 +41,12 @@ section
 	
 	background-color: #fff;
 	padding: 12px 24px;
-    
+    border-bottom: 1px solid #ccc;
     margin-right: 240px;
+}
+
+sup {
+    color: #aaa;
 }
 
 nav
@@ -92,6 +96,7 @@ footer {
     padding: 6px;
     margin-top: 12px;
     font-style: italic;
+    font-size: 11px;
 }
 
 h1
@@ -151,8 +156,8 @@ h6
 	color: #950B02;
 }
 
-.ancestor-name {
-    color: #ccc;
+.yes-def {
+    text-indent: -1000px;
 }
 
 .type-signature {
