--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -14,29 +14,7 @@
     </p>
     <?js } ?>
     
-    <?js if (this.version || this.deprecated || this.since) { ?>
-    <dl>        
-        <?js if (this.version) { ?>
-        <dt>Version</dt>
-        <dd><?js= this.version ?></dd>
-        <?js } ?>
-        
-        <?js if (this.deprecated) { ?>
-        <dt class="important">Deprecated</dt>
-        <?js
-            if (this.deprecated === true) print('<dd class="yesDef">Yes</dd>');
-            else print('<dd>'+this.deprecated+'</dd>');
-        ?>
-        
-        <?js } ?>
-        
-        <?js if (this.since) { ?>
-        <dt>Since</dt>
-        <dd><?js= this.since ?></dd>
-        <?js } ?>
-    </dl>
-    <?js } ?>
-    
+    <?js print(render('details.tmpl', this)); ?>
     
     
     <?js
