Fixes for intrapage link rendering.

--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -1,6 +1,6 @@
 
 <dt id="<?js= longname ?>">
-    <h4 class="name"><?js= this.attribs + (kind == 'class'? 'new ':'') + name + this.signature ?></h4>
+    <h4 class="name" id="<?js= name ?>"><?js= this.attribs + (kind == 'class'? 'new ':'') + name + this.signature ?></h4>
     
     <?js if (this.summary) { ?>
     <p class="summary"><?js= summary ?></p>
