Rendering @links in type names.

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -193,7 +193,7 @@ h6
 	margin: 0;
 	background-color: #fff;
 	color: #000;
-	border-left: 3px #1C02A3 solid;
+	border-left: 3px #ddd solid;
 }
 
 .params
