--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -32,8 +32,10 @@
 	<dd><?js= license ?></dd>
 	<?js } ?>
 	
+	<?js if (this.meta) {?>
 	<dt>Source:</dt>
 	<dd><?js= meta.filename ?>, line <?js= meta.lineno ?></dd>
+	<?js } ?>
 	
 	<?js if (this.see && see.length) {?>
 	<dt>See:</dt>
