Added Jake build script.

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -1,7 +1,7 @@
 {
-	"name": "JSDoc",
-	"version": "3.0.0alpha",
-	"revision": "1308397909756",
+	"name": "{{appname}}",
+	"version": "{{appversion}}",
+	"revision": "{{timestamp}}",
 	"description": "An automatic documentation generator for javascript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
