Added support for @todo.

--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -52,4 +52,15 @@
         ?></ul>
 	</dd>
 	<?js } ?>
+	
+	<?js if (this.todo && todo.length) {?>
+	<dt>To Do:</dt>
+	<dd>
+        <ul><?js
+            todo.forEach(function(t) {
+                print('<li>'+t+'</li>');
+            });
+        ?></ul>
+	</dd>
+	<?js } ?>
 </dl>
