--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -1,50 +1,56 @@
 <dl class="details">
 	<?js if (this.version) {?>
-	<dt>Version:</dt>
-	<dd><?js= version ?></dd>
+	<dt class="tag-version">Version:</dt>
+	<dd class="tag-version"><?js= version ?></dd>
 	<?js } ?>
 	
 	<?js if (this.since) {?>
-	<dt>Since:</dt>
-	<dd><?js= since ?></dd>
+	<dt class="tag-since">Since:</dt>
+	<dd class="tag-since"><?js= since ?></dd>
 	<?js } ?>
 	
 	<?js if (this.deprecated) { ?>
-        <dt class="important">Deprecated<?js
-            if (this.deprecated === true) print('</dt><dd class="yes-def">Yes</dd>');
+        <dt class="important tag-deprecated">Deprecated<?js
+            if (this.deprecated === true) print('</dt><dd class="yes-def tag-deprecated">Yes</dd>');
             else print(':</dt><dd>'+this.deprecated+'</dd>');
         ?>
         
         <?js } ?>
 	
-	<?js if (this.author) {?>
-	<dt>Author:</dt>
-	<dd><?js= author ?></dd>
+	<?js if (this.author && author.length) {?>
+	<dt class="tag-author">Author:</dt>
+	<dd class="tag-author">
+        <ul><?js
+            author.forEach(function(a) {
+                print('<li>'+a+'</li>');
+            });
+        ?></ul>
+	</dd>
 	<?js } ?>
 	
 	<?js if (this.copyright) {?>
-	<dt>Copyright:</dt>
-	<dd><?js= copyright ?></dd>
+	<dt class="tag-copyright">Copyright:</dt>
+	<dd class="tag-copyright"><?js= copyright ?></dd>
 	<?js } ?>
 	
 	<?js if (this.license) {?>
-	<dt>License:</dt>
-	<dd><?js= license ?></dd>
+	<dt class="tag-license">License:</dt>
+	<dd class="tag-license"><?js= license ?></dd>
 	<?js } ?>
 	
 	<?js if (this.defaultvalue) {?>
-	<dt>Default Value:</dt>
-	<dd><?js= this.defaultvalue ?></dd>
+	<dt class="tag-default">Default Value:</dt>
+	<dd class="tag-default"><?js= this.defaultvalue ?></dd>
 	<?js } ?>
 	
 	<?js if (this.meta) {?>
-	<dt>Source:</dt>
-	<dd><?js= meta.filename ?>, line <?js= meta.lineno ?></dd>
+	<dt class="tag-source">Source:</dt>
+	<dd class="tag-source"><?js= meta.filename ?>, line <?js= meta.lineno ?></dd>
 	<?js } ?>
 	
 	<?js if (this.see && see.length) {?>
-	<dt>See:</dt>
-	<dd>
+	<dt class="tag-see">See:</dt>
+	<dd class="tag-see">
         <ul><?js
             see.forEach(function(s) {
                 print('<li>'+linkto(s)+'</li>');
@@ -54,8 +60,8 @@
 	<?js } ?>
 	
 	<?js if (this.todo && todo.length) {?>
-	<dt>To Do:</dt>
-	<dd>
+	<dt class="tag-todo">To Do:</dt>
+	<dd class="tag-todo">
         <ul><?js
             todo.forEach(function(t) {
                 print('<li>'+t+'</li>');
