--- a/templates/default/tmpl/exceptions.tmpl
+++ b/templates/default/tmpl/exceptions.tmpl
@@ -6,7 +6,7 @@
     <?js } ?>
     
     <?js
-        if (typeof this.names !== 'undefined') {
+        if (this.type && this.type.names) {
     ?>
     <dl>
         <dt>
@@ -14,9 +14,10 @@
         </dt>
         <dd>
             <?js
-                this.names.forEach(function(name, i) {
+    			var typeNames = this.type.names;
+                typeNames.forEach(function(name, i) {
             ?>
-            <span class="param-type"><?js= name ?></span> <?js if (i < this.names.length-1) print('|'); ?>
+            <span class="param-type"><?js= linkto(name, htmlsafe(name)) ?></span> <?js if (i < typeNames.length-1) print('|'); ?>
             <?js
                  });
             ?>
