Change to CSS on default template to hide the variation name, when displaying multiple symbols with the same name. Added test case file with example of more complex variations usage.

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -35,7 +35,7 @@
             }
             
             if (doc.variation) {
-               print('<sup>'+doc.variation+'</sup>'); 
+               print('<sup class="variation">'+doc.variation+'</sup>'); 
             }
             
          ?></h2>
