Rename old @property tag to @member.

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -154,18 +154,18 @@
         <?js } ?>
         
         <?js
-            var properties = find({kind: 'property', memberof: doc.longname});
+            var members = find({kind: 'member', memberof: doc.longname});
             if (title === 'Globals') {
-                properties = find({kind: 'property', memberof: {isUndefined: true}});
+                members = find({kind: 'member', memberof: {isUndefined: true}});
             }
-            if (properties && properties.length && properties.forEach) { 
+            if (members && members.length && members.forEach) { 
         ?>
             
-            <h3 class="subsection-title">Properties</h3>
+            <h3 class="subsection-title">Members</h3>
             
             <dl><?js
-                properties.forEach(function(p) {
-                    print(render('properties.tmpl', p));
+                members.forEach(function(p) {
+                    print(render('members.tmpl', p));
                 });
             ?></dl>
             
