--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -134,7 +134,7 @@ h4
 	color: #A35A00;
 }
 
-h5
+h5, .container-overview .subsection-title
 {
 	font-size: 16px;
 	font-weight: bold;
@@ -203,16 +203,16 @@ h6
 	border-left: 3px #ddd solid;
 }
 
-.params
+.params, .props
 {
 	border-spacing: 0;
 	border: 0;
 	border-collapse: collapse;
 }
 
-.params .name { color: #1C02A3; }
+.params .name, .props .name { color: #1C02A3; }
 
-.params td, .params th
+.params td, .params th, .props td, .props th
 {
 	border: 1px solid #ddd;
 	margin: 0px;
@@ -222,17 +222,17 @@ h6
 	display: table-cell;
 }
 
-.params thead tr
+.params thead tr, .props thead tr
 {
 	background-color: #ddd;
 	font-weight: bold;
 }
 
-.params .params thead tr
+.params .params thead tr, .props .props thead tr
 {
 	background-color: #fff;
 	font-weight: bold;
 }
 
-.params th { border-right: 1px solid #aaa; }
-.params thead .last { border-right: 1px solid #ddd; }
+.params th, .props th { border-right: 1px solid #aaa; }
+.params thead .last, .props thead .last { border-right: 1px solid #ddd; }
