Fix for event names not being linked in the template output.

--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -33,7 +33,7 @@
     <h5>Fires:</h5>
     <ul><?js
         fires.forEach(function(f) {
-            print( render('fires.tmpl', f) );
+            print( render('fires.tmpl', linkto(f) ) );
         });
     ?></ul>
     <?js } ?>
