--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -171,7 +171,7 @@ h6
     color: #aaa;
 }
 
-.details dt { width:100px; float:left; border-left: 2px solid #333; padding-left: 10px;}
+.details dt { width:100px; float:left; border-left: 2px solid #DDD; padding-left: 10px;}
 .details dd { margin-left: 50px; }
 .details ul { margin: 0; }
 .details ul.dummy { list-style-type: none; }
