Fixed incorrect intrapage links for events. Closes #38.

--- a/templates/default/tmpl/members.tmpl
+++ b/templates/default/tmpl/members.tmpl
@@ -1,6 +1,6 @@
 
-<dt id="member:<?js= longname ?>">
-    <h4 class="name"><?js= this.attribs + name + this.signature ?></h4>
+<dt>
+    <h4 class="name" id="<?js= id ?>"><?js= this.attribs + name + this.signature ?></h4>
     
     <?js if (this.summary) { ?>
     <p class="summary"><?js= summary ?></p>
