--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -1,5 +1,5 @@
-<dt id="<?js= longname ?>">
-    <h4 class="name" id="<?js= name ?>"><?js= this.attribs + (kind == 'class'? 'new ':'') + name + this.signature ?></h4>
+<dt>
+    <h4 class="name" id="<?js= id ?>"><?js= this.attribs + (kind == 'class'? 'new ':'') + name + this.signature ?></h4>
     
     <?js if (this.summary) { ?>
     <p class="summary"><?js= summary ?></p>
