--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -21,6 +21,10 @@
         {
 			"name":  "Michael Mathews",
 			"email": "micmath@gmail.com"
+		},
+        {
+			"name":  "Rafa\u0105 Wrzeszcz",
+			"email": "rafal.wrzeszcz@wrzasq.pl"
 		}
     ],
 	"maintainers": [
