--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -60,6 +60,17 @@
 	<dt class="tag-source">Source:</dt>
 	<dd class="tag-source"><ul class="dummy"><li><?js= meta.filename ?>, line <?js= meta.lineno ?></li></ul></dd>
 	<?js } ?>
+    
+    <?js if (this.tutorials && tutorials.length) {?>
+    <dt class="tag-tutorial">Tutorials:</dt>
+    <dd class="tag-tutorial">
+        <ul><?js
+            tutorials.forEach(function(t) {
+                print('<li>'+tutoriallink(t)+'</li>');
+            });
+        ?></ul>
+    </dd>
+    <?js } ?>
 	
 	<?js if (this.see && see.length) {?>
 	<dt class="tag-see">See:</dt>
