Improved template engine.

--- a/templates/default/tmpl/examples.tmpl
+++ b/templates/default/tmpl/examples.tmpl
@@ -1,5 +1,5 @@
 <?js
-    this.forEach(function(example) {
+    data.forEach(function(example) {
         if (example.caption) {
     ?>
         <p class="code-caption"><?js= example.caption ?></p>
