--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -1,36 +1,37 @@
+<?js var self = this; ?>
 <dl class="details">
     <?js
-        var properties = this.properties;
+        var properties = data.properties;
         if (properties && properties.length && properties.forEach) { 
     ?>
         
         <h5 class="subsection-title">Properties:</h5>
         
         <dl><?js
-            print( render('properties.tmpl', properties) );
+            print( this.partial('properties.tmpl', properties) );
         ?></dl>
         
     <?js } ?>
         
-	<?js if (this.version) {?>
+	<?js if (data.version) {?>
 	<dt class="tag-version">Version:</dt>
 	<dd class="tag-version"><ul class="dummy"><li><?js= version ?></li></ul></dd>
 	<?js } ?>
 	
-	<?js if (this.since) {?>
+	<?js if (data.since) {?>
 	<dt class="tag-since">Since:</dt>
 	<dd class="tag-since"><ul class="dummy"><li><?js= since ?></dd>
 	<?js } ?>
 	
-	<?js if (this.deprecated) { ?>
+	<?js if (data.deprecated) { ?>
         <dt class="important tag-deprecated">Deprecated<?js
-            if (this.deprecated === true) print('</dt><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd>');
-            else print(':</dt><dd><ul class="dummy"><li>'+this.deprecated+'</li><ul></dd>');
+            if (data.deprecated === true) print('</dt><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd>');
+            else print(':</dt><dd><ul class="dummy"><li>'+data.deprecated+'</li><ul></dd>');
         ?>
         
         <?js } ?>
 	
-	<?js if (this.author && author.length) {?>
+	<?js if (data.author && author.length) {?>
 	<dt class="tag-author">Author:</dt>
 	<dd class="tag-author">
         <ul><?js
@@ -41,49 +42,49 @@
 	</dd>
 	<?js } ?>
 	
-	<?js if (this.copyright) {?>
+	<?js if (data.copyright) {?>
 	<dt class="tag-copyright">Copyright:</dt>
 	<dd class="tag-copyright"><ul class="dummy"><li><?js= copyright ?></li></ul></dd>
 	<?js } ?>
 	
-	<?js if (this.license) {?>
+	<?js if (data.license) {?>
 	<dt class="tag-license">License:</dt>
 	<dd class="tag-license"><ul class="dummy"><li><?js= license ?></li></ul></dd>
 	<?js } ?>
 	
-	<?js if (this.defaultvalue) {?>
+	<?js if (data.defaultvalue) {?>
 	<dt class="tag-default">Default Value:</dt>
-	<dd class="tag-default"><ul class="dummy"><li><?js= this.defaultvalue ?></li></ul></dd>
+	<dd class="tag-default"><ul class="dummy"><li><?js= data.defaultvalue ?></li></ul></dd>
 	<?js } ?>
 	
-	<?js if (this.meta) {?>
+	<?js if (data.meta) {?>
 	<dt class="tag-source">Source:</dt>
 	<dd class="tag-source"><ul class="dummy"><li><?js= meta.filename ?>, line <?js= meta.lineno ?></li></ul></dd>
 	<?js } ?>
     
-    <?js if (this.tutorials && tutorials.length) {?>
+    <?js if (data.tutorials && tutorials.length) {?>
     <dt class="tag-tutorial">Tutorials:</dt>
     <dd class="tag-tutorial">
         <ul><?js
             tutorials.forEach(function(t) {
-                print('<li>'+tutoriallink(t)+'</li>');
+                print('<li>'+self.tutoriallink(t)+'</li>');
             });
         ?></ul>
     </dd>
     <?js } ?>
 	
-	<?js if (this.see && see.length) {?>
+	<?js if (data.see && see.length) {?>
 	<dt class="tag-see">See:</dt>
 	<dd class="tag-see">
         <ul><?js
             see.forEach(function(s) {
-                print('<li>'+linkto(s)+'</li>');
+                print('<li>'+self.linkto(s)+'</li>');
             });
         ?></ul>
 	</dd>
 	<?js } ?>
 	
-	<?js if (this.todo && todo.length) {?>
+	<?js if (data.todo && todo.length) {?>
 	<dt class="tag-todo">To Do:</dt>
 	<dd class="tag-todo">
         <ul><?js
