--- a/templates/default/tmpl/exceptions.tmpl
+++ b/templates/default/tmpl/exceptions.tmpl
@@ -1,11 +1,11 @@
-<?js if (this.description) { ?>
+<?js if (data.description) { ?>
 <div class="param-desc">
     <?js= description ?>
 </div>
 <?js } ?>
 
 <?js
-	if (this.type && this.type.names) {
+	if (data.type && data.type.names) {
 ?>
 <dl>
 	<dt>
@@ -13,10 +13,11 @@
 	</dt>
 	<dd>
 		<?js
-			var typeNames = this.type.names;
+			var typeNames = data.type.names,
+                self = this;
 			typeNames.forEach(function(name, i) {
 		?>
-		<span class="param-type"><?js= linkto(name, htmlsafe(name)) ?></span> <?js if (i < typeNames.length-1) print('|'); ?>
+		<span class="param-type"><?js= self.linkto(name, self.htmlsafe(name)) ?></span> <?js if (i < typeNames.length-1) print('|'); ?>
 		<?js
 			 });
 		?>
