--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -1,71 +1,72 @@
+<?js var self = this; ?>
 <dt>
-    <h4 class="name" id="<?js= id ?>"><?js= this.attribs + (kind == 'class'? 'new ':'') + name + this.signature ?></h4>
+    <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (kind == 'class'? 'new ':'') + name + data.signature ?></h4>
     
-    <?js if (this.summary) { ?>
+    <?js if (data.summary) { ?>
     <p class="summary"><?js= summary ?></p>
     <?js } ?>
 </dt>
 <dd>
     
-    <?js if (this.description) { ?>
+    <?js if (data.description) { ?>
     <p class="description">
-        <?js= this.description ?>
+        <?js= data.description ?>
     </p>
     <?js } ?>
     
     <?js
-    if (this['this']) {
+    if (data['this']) {
         print('<h5>This:</h5>');
-        print( '<ul><li>'+linkto(this['this'], this['this'])+'</li></ul>' );
+        print( '<ul><li>'+this.linkto(data['this'], data['this'])+'</li></ul>' );
     }
     ?>
     
     <?js
-    if (this.params && params.length) {
+    if (data.params && params.length) {
         print('<h5>Parameters:</h5>');
-        print( render('params.tmpl', params) );
+        print( this.partial('params.tmpl', params) );
     }
     ?>
     
-    <?js print(render('details.tmpl', this)); ?>
+    <?js= this.partial('details.tmpl', data) ?>
     
-    <?js if (this.fires && fires.length) { ?>
+    <?js if (data.fires && fires.length) { ?>
     <h5>Fires:</h5>
     <ul><?js
         fires.forEach(function(f) {
-            print( render('fires.tmpl', linkto(f) ) );
+            print( self.partial('fires.tmpl', self.linkto(f) ) );
         });
     ?></ul>
     <?js } ?>
     
-    <?js if (this.exceptions && exceptions.length) { ?>
+    <?js if (data.exceptions && exceptions.length) { ?>
     <h5>Throws:</h5>
     <?js if (exceptions.length > 1) { ?><ul><?js
         exceptions.forEach(function(r) {
-            print( '<li>' + render('exceptions.tmpl', r) + '</li>' );
+            print( '<li>' + self.partial('exceptions.tmpl', r) + '</li>' );
         });
     ?></ul><?js } else {
         exceptions.forEach(function(r) {
-            print( render('exceptions.tmpl', r) );
+            print( self.partial('exceptions.tmpl', r) );
         });
     } } ?>
     
-    <?js if (this.returns && returns.length) { ?>
+    <?js if (data.returns && returns.length) { ?>
     <h5>Returns:</h5>
     <?js if (returns.length > 1) { ?><ul><?js
         returns.forEach(function(r) {
-            print( '<li>' + render('returns.tmpl', r) + '</li>' );
+            print( '<li>' + self.partial('returns.tmpl', r) + '</li>' );
         });
     ?></ul><?js } else {
         returns.forEach(function(r) {
-            print( render('returns.tmpl', r) );
+            print( self.partial('returns.tmpl', r) );
         });
     } } ?>
     
     <?js
-    if (this.examples && examples.length) {
+    if (data.examples && examples.length) {
         print('<h5>Example' + (examples.length > 1? 's':'') + '</h5>');
-        print( render('examples.tmpl', examples) );
+        print( this.partial('examples.tmpl', examples) );
     }
     ?>
 
