--- a/templates/default/tmpl/properties.tmpl
+++ b/templates/default/tmpl/properties.tmpl
@@ -1,5 +1,5 @@
 <?js
-    var props = this;
+    var props = data;
     
     /* sort subprops under their parent props (like opts.classname) */
     var parentProp = null;
@@ -61,6 +61,7 @@
 	
 	<tbody>
 	<?js
+        var self = this;
 	    props.forEach(function(prop) {
 	        if (!prop) { return; }
 	?>
@@ -74,7 +75,7 @@
             <?js
                 if (prop.type && prop.type.names) {
                     prop.type.names.forEach(function(name, i) {
-                        print( linkto(name, htmlsafe(name)) );
+                        print( self.linkto(name, self.htmlsafe(name)) );
                         if (i < prop.type.names.length-1) { print(' | '); }
                     }); 
                 }
@@ -99,14 +100,14 @@
                 <td class="default">
                 <?js
                     if (typeof prop.defaultvalue !== 'undefined') {
-                        print( htmlsafe(prop.defaultvalue) );
+                        print( self.htmlsafe(prop.defaultvalue) );
                     }
                 ?>
                 </td>
             <?js } ?>
             
             <td class="description last"><?js= prop.description ?><?js if (prop.subprops) {
-                print( '<h6>Properties</h6>' + render('properties.tmpl', prop.subprops) );
+                print( '<h6>Properties</h6>' + self.partial('properties.tmpl', prop.subprops) );
             }?></td>
         </tr>
 	
